# dcct

./: .gitignore  Makefile  README.md  compile_flags.txt  craft.py  craft.sh  meson.build  nohup.out  perf.sh  plot.py  produce.sh  static.sh  trial.sh
.github/workflows/: static.yml
doc/: Doxifile.in  Makefile  index.md
include/: dcct.hh
include/dcct/: actuator.hh  benchmark.hh  compression.hh  fast_actuator.hh  fftw_actuator.hh  gui.hh  logging.hh  matrix.hh  pocketfft_actuator.hh  slow_actuator.hh  specifiers.hh  testing.hh  timer.hh  traits.hh
pesto/: __main__.py  crafters.py  loaders.py  logs.py  plotters.py  utils.py
report/: .gitignore  main.tex
report/images/: diagram.d2
resources/matrices/: dct.mat  dct2.mat  input.mat
slides/: .gitignore  main.tex
slides/images/: ad-compression.d2  ad-compression.mmd
src/: main.cc
src/dcct/: benchmark.cc  compression.cc  fast_actuator.cc  fftw_actuator.cc  gui.cc  logging.cc  matrix.cc  pocketfft_actuator.cc  slow_actuator.cc  specifiers.cc  testing.cc  timer.cc
tests/: meson.build
tests/include/dcct/: tests.hh
tests/src/dcct/: fast_dct.cc  fast_dct2.cc  fast_idct.cc  fast_idct2.cc  fftw_dct.cc  fftw_dct2.cc  fftw_fast_dct.cc  fftw_fast_dct2.cc  fftw_fast_idct.cc  fftw_fast_idct2.cc  fftw_idct.cc  fftw_idct2.cc  pocketfft_dct.cc  pocketfft_dct2.cc  pocketfft_fast_dct.cc  pocketfft_fast_dct2.cc  pocketfft_fast_idct.cc  pocketfft_fast_idct2.cc  pocketfft_idct.cc  pocketfft_idct2.cc  slow_dct.cc  slow_dct2.cc  slow_fast_dct.cc  slow_fast_dct2.cc  slow_fast_idct.cc  slow_fast_idct2.cc  slow_idct.cc  slow_idct2.cc
