tests_includes = include_directories(['../include', './include'])

test_slow_dct = executable('test_slow_dct', [
    './src/dcct/slow_dct.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('Slow DCT Test', test_slow_dct)

test_slow_dct2 = executable('test_slow_dct2', [
    './src/dcct/slow_dct2.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('Slow DCT2 Test', test_slow_dct2)

test_fast_dct = executable('test_fast_dct', [
    './src/dcct/fast_dct.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('Fast DCT Test', test_fast_dct)

test_fast_dct2 = executable('test_fast_dct2', [
    './src/dcct/fast_dct2.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('Fast DCT2 Test', test_fast_dct2)

test_fftw_dct = executable('test_fftw_dct', [
    './src/dcct/fftw_dct.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('FFTW DCT Test', test_fftw_dct)

test_fftw_dct2 = executable('test_fftw_dct2', [
    './src/dcct/fftw_dct2.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('FFTW DCT2 Test', test_fftw_dct2)

test_slow_fast_dct = executable('test_slow_fast_dct', [
    './src/dcct/slow_fast_dct.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('Slow-Fast DCT Consistency Test', test_slow_fast_dct)

test_fftw_fast_dct = executable('test_fftw_fast_dct', [
    './src/dcct/fftw_fast_dct.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('FFTW-Fast DCT Consistency Test', test_fftw_fast_dct)

test_slow_fast_dct2 = executable('test_slow_fast_dct2', [
    './src/dcct/slow_fast_dct2.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('Slow-Fast DCT2 Consistency Test', test_slow_fast_dct2)

test_fftw_fast_dct2 = executable('test_fftw_fast_dct2', [
    './src/dcct/fftw_fast_dct2.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('FFTW-Fast DCT2 Consistency Test', test_fftw_fast_dct2)

test_slow_idct = executable('test_slow_idct', [
    './src/dcct/slow_idct.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('Slow IDCT Test', test_slow_idct)

test_slow_idct2 = executable('test_slow_idct2', [
    './src/dcct/slow_idct2.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('Slow IDCT2 Test', test_slow_idct2)

test_fast_idct = executable('test_fast_idct', [
    './src/dcct/fast_idct.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('Fast IDCT Test', test_fast_idct)

test_fast_idct2 = executable('test_fast_idct2', [
    './src/dcct/fast_idct2.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('Fast IDCT2 Test', test_fast_idct2)

test_fftw_idct = executable('test_fftw_idct', [
    './src/dcct/fftw_idct.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('FFTW IDCT Test', test_fftw_idct)

test_fftw_idct2 = executable('test_fftw_idct2', [
    './src/dcct/fftw_idct2.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('FFTW IDCT2 Test', test_fftw_idct2)

test_slow_fast_idct = executable('test_slow_fast_idct', [
    './src/dcct/slow_fast_idct.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('Slow-Fast IDCT Consistency Test', test_slow_fast_idct)

test_fftw_fast_idct = executable('test_fftw_fast_idct', [
    './src/dcct/fftw_fast_idct.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('FFTW-Fast IDCT Consistency Test', test_fftw_fast_idct)

test_slow_fast_idct2 = executable('test_slow_fast_idct2', [
    './src/dcct/slow_fast_idct2.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('Slow-Fast IDCT2 Consistency Test', test_slow_fast_idct2)

test_fftw_fast_idct2 = executable('test_fftw_fast_idct2', [
    './src/dcct/fftw_fast_idct2.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('FFTW-Fast IDCT2 Consistency Test', test_fftw_fast_idct2)

test_pocketfft_dct = executable('test_pocketfft_dct', [
    './src/dcct/pocketfft_dct.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('PocketFFT DCT Test', test_pocketfft_dct)

test_pocketfft_dct2 = executable('test_pocketfft_dct2', [
    './src/dcct/pocketfft_dct2.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('PocketFFT DCT2 Test', test_pocketfft_dct2)

test_pocketfft_fast_dct = executable('test_pocketfft_fast_dct', [
    './src/dcct/pocketfft_fast_dct.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('PocketFFT-Fast DCT Consistency Test', test_pocketfft_fast_dct)

test_pocketfft_fast_dct2 = executable('test_pocketfft_fast_dct2', [
    './src/dcct/pocketfft_fast_dct2.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('PocketFFT-Fast DCT2 Consistency Test', test_pocketfft_fast_dct2)

test_pocketfft_idct = executable('test_pocketfft_idct', [
    './src/dcct/pocketfft_idct.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('PocketFFT IDCT Test', test_pocketfft_idct)

test_pocketfft_idct2 = executable('test_pocketfft_idct2', [
    './src/dcct/pocketfft_idct2.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('PocketFFT IDCT2 Test', test_pocketfft_idct2)

test_pocketfft_fast_idct = executable('test_pocketfft_fast_idct', [
    './src/dcct/pocketfft_fast_idct.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('PocketFFT-Fast IDCT Consistency Test', test_pocketfft_fast_idct)

test_pocketfft_fast_idct2 = executable('test_pocketfft_fast_idct2', [
    './src/dcct/pocketfft_fast_idct2.cc',
  ], install : false,
  include_directories: tests_includes,
  link_with: dcct)
test('PocketFFT-Fast IDCT2 Consistency Test', test_pocketfft_fast_idct2)
